--- a/tabel.ui
+++ b/tabel.ui
@@ -1270,6 +1270,19 @@ p, li { white-space: pre-wrap; }
      <string>создания</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="setting_but">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>510</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Настройки</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="sizeGripEnabled">
